--- a/index.css
+++ b/index.css
@@ -1,7 +1,34 @@
 .schedule {
+    color: orange;
     white-space: pre-wrap;
     text-align: center;
     margin-bottom: 0;
     margin-top: 0;
     font-family: Arial, Helvetica, sans-serif;
+    font-size: large;
+}
+
+.navbar {
+    background-color: #4287f5;
+    color: white;
+    width: 100%;
+    font-size: xx-large;
+}
+
+.body {
+    margin: 0px;
+}
+
+.nava {
+    outline: none;
+    color: orange;
+    font-family: Arial, Helvetica, sans-serif;
+    text-decoration: none;
+}
+
+.nava:hover {
+    outline: none;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    text-decoration: none;
 }
